Integration test for 01-sockets-ca